# codex-acp

./: Cargo.toml  README.md
.github/workflows/: release.yml
npm/: README.md  package.json
npm/publish/: create-platform-packages.sh  update-base-package.sh
npm/template/: package.json
npm/testing/: validate.sh
src/: codex_agent.rs  lib.rs  prompt_args.rs  thread.rs
