[package]
name = "codex-acp"
version = "0.11.8"
edition = "2024"
authors = ["Proliferate"]
license = "Apache-2.0"
description = "An ACP-compatible coding agent powered by Codex"
repository = "https://github.com/proliferate-ai/codex-acp"
homepage = "https://github.com/proliferate-ai/codex-acp"

[[bin]]
name = "codex-acp"
path = "src/main.rs"

[lib]
doctest = false
name = "codex_acp"
path = "src/lib.rs"

[dependencies]
agent-client-protocol = { version = "=0.10.4", features = ["unstable"] }
anyhow = "1"
async-trait = "0.1"
clap = "4"
codex-apply-patch = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-arg0 = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-config = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-core = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-exec-server = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-features = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-mcp-server = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-models-manager = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-protocol = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-login = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-shell-command = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-utils-approval-presets = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-utils-absolute-path = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
codex-utils-cli = { git = "https://github.com/openai/codex", tag = "rust-v0.125.0" }
diffy = "0.4.2"
# Pin avoids pulling winnow 1.0 through gix 0.81/codex-git-utils while public
# gix APIs still expose winnow 0.x types.
gix-actor = "=0.40.0"
# Pin avoids icu 2.2 API changes breaking temporal_rs through v8/codex-code-mode.
icu_calendar = "~2.1"
itertools = "0.14.0"
regex-lite = "0.1"
serde = { version = "1", features = ["derive"] }
# codex-cli depends on codex-tui, which enables serde_json/preserve_order; match
# that behavior here because it affects MCP keychain account hashing.
serde_json = { version = "1", features = ["preserve_order"] }
shlex = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
heck = "0.5.0"
unicode-segmentation = "1.11.0"
uuid = { version = "1", features = ["v4"] }

[lints.rust]
let-underscore = "warn"
rust-2018-idioms = "warn"
unused = "warn"

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
